
..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.3?
============================
Release date: TBA

* Fix false positive for ``unnecessary-ellipsis`` when using an ellipsis as a default argument.

  Closes #5973

* Fix crash involving unbalanced tuple unpacking.

  Closes #5998


What's New in Pylint 2.13.2?
============================
Release date: 2022-03-27

* Fix crash when subclassing a ``namedtuple``.

  Closes #5982

* Fix false positive for ``superfluous-parens`` for patterns like
  "return (a or b) in iterable".

  Closes #5803

* Fix a false negative regression in 2.13.0 where ``protected-access`` was not
  raised on functions.

  Fixes #5989

* Better error messages in case of crash if pylint can't write the issue template.

  Refer to #5987


What's New in Pylint 2.13.1?
============================
Release date: 2022-03-26

* Fix a regression in 2.13.0 where ``used-before-assignment`` was emitted for
  the usage of a nonlocal in a try block.

  Fixes #5965

* Avoid emitting ``raising-bad-type`` when there is inference ambiguity on
  the variable being raised.

  Closes #2793

* Loosen TypeVar default name pattern a bit to allow names with multiple uppercase
  characters. E.g. ``HVACModeT`` or ``IPAddressT``.

  Closes #5981

* Fixed false positive for ``unused-argument`` when a ``nonlocal`` name is used
  in a nested function that is returned without being called by its parent.

  Closes #5187

* Fix program crash for ``modified_iterating-list/set/dict`` when the list/dict/set
  being iterated through is a function call.

  Closes #5969

* Don't emit ``broken-noreturn`` and ``broken-collections-callable`` errors
  inside ``if TYPE_CHECKING`` blocks.


What's New in Pylint 2.13.0?
============================
Release date: 2022-03-24

* Add missing dunder methods to ``unexpected-special-method-signature`` check.
